--- a/DateApp/BP/DateApp.csproj
+++ b/DateApp/BP/DateApp.csproj
@@ -50,11 +50,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DateAppForm.cs">
+    <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DateAppForm.Designer.cs">
-      <DependentUpon>DateAppForm.cs</DependentUpon>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Helpers\DataAccess.cs" />
     <Compile Include="Helpers\GUIHelper.cs" />
@@ -63,8 +63,8 @@
     <Compile Include="Models\PersonSeeking.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="DateAppForm.resx">
-      <DependentUpon>DateAppForm.cs</DependentUpon>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
